--- a/src/posts/2021/seond-post/index.mdx
+++ b/src/posts/2021/seond-post/index.mdx
@@ -1,18 +1,19 @@
 ---
 layout: post
-title:	How to Start a new Country, a Review
-date: "2021-04-11"
-author: "Odysseas Lamtzidis"
-name: "asdfafssaasf"
+title:	asfadsfdsaggfgafsdfasfdsf
+date: 2021-04-11
+author: "sdfdsf"
 tags:
     - "2021"
     - "1729"
     - "society"
-excerpt: "A thought experiment that could result in an actual Country in the Cloud"
-coverImage: "/images/cloud-country.jpg"
-imageLegend: "Cloud City from [Bioshock Infinite](https://bioshock.fandom.com/wiki/Columbia)"
-category: futurism
+excerpt: "A thougasfsdfasdfasfasdfht experiment that could result in an actual Country in the Cloud"
+image: https://cdn.mos.cms.futurecdn.net/4b711fa900291f491b0bdbb79f37342d.jpg
+vertical: futurism
 ---
+
+![cloud city by bioshock](https://cdn.mos.cms.futurecdn.net/4b711fa900291f491b0bdbb79f37342d.jpg)
+Cloud City from [Bioshock Infinite](https://bioshock.fandom.com/wiki/Columbia)
 
 [Balaji Srivansan](https://balajis.com/about/), a prominent figure in the blockchain space and one of the few to correctly predict (unfortunately) the sheer size and results of the COVID-19 pandemic, has been talking about the Network State for quite some time. 
 
