addd cover image support

--- a/src/posts/2021/how-to-start-a-cloud-country/index.mdx
+++ b/src/posts/2021/how-to-start-a-cloud-country/index.mdx
@@ -9,10 +9,13 @@ tags:
     - "1729"
     - "society"
 excerpt: "A thought experiment that could result in an actual Country in the Cloud"
-coverImage: "/images/cloud-country.jpg"
-imageLegend: "Cloud City from [Bioshock Infinite](https://bioshock.fandom.com/wiki/Columbia)"
+coverImage: "./cloud-country.jpeg"
+coverImageLegend: "Cloud City from [Bioshock Infinite](https://bioshock.fandom.com/wiki/Columbia)"
 category: futurism
 ---
+
+![this is a test iamge](./overview.png "Overview of Netdata")
+
 
 [Balaji Srivansan](https://balajis.com/about/), a prominent figure in the blockchain space and one of the few to correctly predict (unfortunately) the sheer size and results of the COVID-19 pandemic, has been talking about the Network State for quite some time. 
 
