gargantuan commit; Bring Repo up to date

--- a/gatsby/src/posts/2021/seond-post/index.mdx
+++ b/gatsby/src/posts/2021/seond-post/index.mdx
@@ -1,8 +1,9 @@
 ---
 layout: post
-title:	asfadsfdsaggfgafsdfasfdsf
-date: 2021-04-11
+title:	second post
+date: 2020-04-11
 author: "sdfdsf"
+category: futurism
 tags:
     - "2021"
     - "1729"
